--- a/html/database/index.html
+++ b/html/database/index.html
@@ -2191,18 +2191,18 @@ mysql> DESCRIBE prg_items;
 	</p>
 	<pre>
 mysql> DESCRIBE prg_resources;
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+----------------+
-| Field  | Type                                                                                | Null | Key | Default | Extra          |
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+----------------+
-| RscCod | int                                                                                 | NO   | PRI | NULL    | auto_increment |
-| ItmCod | int                                                                                 | NO   | MUL | -1      |                |
-| RscInd | int                                                                                 | NO   |     | 0       |                |
-| Hidden | enum('N','Y')                                                                       | NO   |     | N       |                |
-| Type   | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','att','for','svy') | NO   |     | non     |                |
-| Cod    | int                                                                                 | NO   |     | -1      |                |
-| Title  | varchar(2047)                                                                       | NO   |     | NULL    |                |
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+----------------+
-7 rows in set (0,00 sec)
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+----------------+
+| Field  | Type                                                                                      | Null | Key | Default | Extra          |
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+----------------+
+| RscCod | int                                                                                       | NO   | PRI | NULL    | auto_increment |
+| ItmCod | int                                                                                       | NO   | MUL | -1      |                |
+| RscInd | int                                                                                       | NO   |     | 0       |                |
+| Hidden | enum('N','Y')                                                                             | NO   |     | N       |                |
+| Type   | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','grp','att','for','svy') | NO   |     | non     |                |
+| Cod    | int                                                                                       | NO   |     | -1      |                |
+| Title  | varchar(2047)                                                                             | NO   |     | NULL    |                |
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+----------------+
+7 rows in set (0,01 sec)
 	</pre>
 	</section>
 
@@ -2358,15 +2358,15 @@ mysql> DESCRIBE roo_rooms;
 	</p>
 	<pre style="font-size:0.5em;">
 mysql> DESCRIBE rsc_clipboards;
-+----------+-------------------------------------------------------------------------------------+------+-----+---------+-------+
-| Field    | Type                                                                                | Null | Key | Default | Extra |
-+----------+-------------------------------------------------------------------------------------+------+-----+---------+-------+
-| UsrCod   | int                                                                                 | NO   | PRI | NULL    |       |
-| CrsCod   | int                                                                                 | NO   | PRI | NULL    |       |
-| Type     | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','att','for','svy') | NO   | PRI | non     |       |
-| Cod      | int                                                                                 | NO   | PRI | -1      |       |
-| CopyTime | timestamp                                                                           | YES  | MUL | NULL    |       |
-+----------+-------------------------------------------------------------------------------------+------+-----+---------+-------+
++----------+-------------------------------------------------------------------------------------------+------+-----+---------+-------+
+| Field    | Type                                                                                      | Null | Key | Default | Extra |
++----------+-------------------------------------------------------------------------------------------+------+-----+---------+-------+
+| UsrCod   | int                                                                                       | NO   | PRI | NULL    |       |
+| CrsCod   | int                                                                                       | NO   | PRI | NULL    |       |
+| Type     | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','grp','att','for','svy') | NO   | PRI | non     |       |
+| Cod      | int                                                                                       | NO   | PRI | -1      |       |
+| CopyTime | timestamp                                                                                 | YES  | MUL | NULL    |       |
++----------+-------------------------------------------------------------------------------------------+------+-----+---------+-------+
 5 rows in set (0,00 sec)
 	</pre>
 	</section>
@@ -2378,19 +2378,19 @@ mysql> DESCRIBE rsc_clipboards;
 	</p>
 	<pre style="font-size:0.5em;">
 mysql> DESCRIBE rub_criteria;
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+----------------+
-| Field  | Type                                                                                | Null | Key | Default | Extra          |
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+----------------+
-| CriCod | int                                                                                 | NO   | PRI | NULL    | auto_increment |
-| RubCod | int                                                                                 | NO   | MUL | NULL    |                |
-| CriInd | int                                                                                 | NO   |     | NULL    |                |
-| Type   | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','att','for','svy') | NO   |     | non     |                |
-| Cod    | int                                                                                 | NO   |     | -1      |                |
-| MinVal | double                                                                              | NO   |     | 0       |                |
-| MaxVal | double                                                                              | NO   |     | 1       |                |
-| Weight | double                                                                              | NO   |     | 1       |                |
-| Title  | varchar(2047)                                                                       | NO   |     | NULL    |                |
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+----------------+
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+----------------+
+| Field  | Type                                                                                      | Null | Key | Default | Extra          |
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+----------------+
+| CriCod | int                                                                                       | NO   | PRI | NULL    | auto_increment |
+| RubCod | int                                                                                       | NO   | MUL | NULL    |                |
+| CriInd | int                                                                                       | NO   |     | NULL    |                |
+| Type   | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','grp','att','for','svy') | NO   |     | non     |                |
+| Cod    | int                                                                                       | NO   |     | -1      |                |
+| MinVal | double                                                                                    | NO   |     | 0       |                |
+| MaxVal | double                                                                                    | NO   |     | 1       |                |
+| Weight | double                                                                                    | NO   |     | 1       |                |
+| Title  | varchar(2047)                                                                             | NO   |     | NULL    |                |
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+----------------+
 9 rows in set (0,00 sec)
 	</pre>
 	</section>
@@ -2422,16 +2422,16 @@ mysql> DESCRIBE rub_rubrics;
 	</p>
 	<pre>
 mysql> DESCRIBE rub_scores;
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+-------+
-| Field  | Type                                                                                | Null | Key | Default | Extra |
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+-------+
-| Type   | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','att','for','svy') | NO   | PRI | non     |       |
-| Cod    | int                                                                                 | NO   | PRI | NULL    |       |
-| UsrCod | int                                                                                 | NO   | PRI | -1      |       |
-| CriCod | int                                                                                 | NO   | PRI | NULL    |       |
-| EvlCod | int                                                                                 | NO   |     | -1      |       |
-| Score  | double                                                                              | NO   |     | 0       |       |
-+--------+-------------------------------------------------------------------------------------+------+-----+---------+-------+
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+-------+
+| Field  | Type                                                                                      | Null | Key | Default | Extra |
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+-------+
+| Type   | enum('non','asg','prj','cfe','tst','exa','gam','rub','doc','mrk','grp','att','for','svy') | NO   | PRI | non     |       |
+| Cod    | int                                                                                       | NO   | PRI | NULL    |       |
+| UsrCod | int                                                                                       | NO   | PRI | -1      |       |
+| CriCod | int                                                                                       | NO   | PRI | NULL    |       |
+| EvlCod | int                                                                                       | NO   |     | -1      |       |
+| Score  | double                                                                                    | NO   |     | 0       |       |
++--------+-------------------------------------------------------------------------------------------+------+-----+---------+-------+
 6 rows in set (0,00 sec)
 	</pre>
 	</section>
