--- a/html/changelog/index.html
+++ b/html/changelog/index.html
@@ -479,7 +479,7 @@ ALTER TABLE prj_scores ENGINE=MyISAM;
 							</dd>
 		<dt>Version 22.101.6: Apr 20, 2023</dt>
 							<dd>
-							Changes in edition of program items. (337370 lines)
+							Changes in edition of tree nodes. (337370 lines)
 							</dd>
 		<dt>Version 22.101.5: Apr 20, 2023</dt>
 							<dd>
@@ -1166,7 +1166,7 @@ sudo cp icon/thumbs-up.svg /var/www/html/swad/icon/
 							</dd>
 		<dt>Version 22.41:    Oct 06, 2022</dt>
 							<dd>
-							Changes in the behavior of the expansion/contraction of program items. (332511 lines)
+							Changes in the behavior of the expansion/contraction of tree nodes. (332511 lines)
 							</dd>
 		<dt>Version 22.40:    Oct 04, 2022</dt>
 							<dd>
@@ -1340,7 +1340,7 @@ sudo cp icon/check-circle.svg /var/www/html/swad/icon/
 							</dd>
 		<dt>Version 22.18:    Sep 22, 2022</dt>
 							<dd>
-							Expand/contract program items. (331877 lines)<br />
+							Expand/contract tree nodes. (331877 lines)<br />
 							1 change necessary in database:<br />
 							<small><code>
 CREATE TABLE IF NOT EXISTS prg_expanded (UsrCod INT NOT NULL,ItmCod INT NOT NULL,ClickTime DATETIME NOT NULL,UNIQUE INDEX(UsrCod,ItmCod),INDEX(ItmCod),INDEX(ClickTime));<br />
@@ -1380,11 +1380,11 @@ ALTER TABLE prg_expanded ENGINE=MyISAM;
 							</dd>
 		<dt>Version 22.12.2:  Sep 20, 2022</dt>
 							<dd>
-							Changes in behaviour of program items. (331097 lines)
+							Changes in behaviour of tree nodes. (331097 lines)
 							</dd>
 		<dt>Version 22.12.1:  Sep 20, 2022</dt>
 							<dd>
-							Changes in behaviour of program items. (331015 lines)
+							Changes in behaviour of tree nodes. (331015 lines)
 							</dd>
 		<dt>Version 22.12:    Sep 20, 2022</dt>
 							<dd>
@@ -1425,7 +1425,7 @@ sudo cp icon/list-alt.svg /var/www/html/swad/icon/
 							</dd>
 		<dt>Version 22.6:     Sep 17, 2022</dt>
 							<dd>
-							Changes in edition of program items. (330065 lines)
+							Changes in edition of tree nodes. (330065 lines)
 							</dd>
 		<dt>Version 22.5:     Sep 16, 2022</dt>
 							<dd>
@@ -1433,11 +1433,11 @@ sudo cp icon/list-alt.svg /var/www/html/swad/icon/
 							</dd>
 		<dt>Version 22.4.2:   Sep 16, 2022</dt>
 							<dd>
-							Changes in edition of program items. (329982 lines)
+							Changes in edition of tree nodes. (329982 lines)
 							</dd>
 		<dt>Version 22.4.1:   Sep 15, 2022</dt>
 							<dd>
-							Changes in edition of program items. (329955 lines)<br />
+							Changes in edition of tree nodes. (329955 lines)<br />
 							Copy the following icon to icon public directory:<br />
 							<small><code>
 sudo cp icon/link.svg /var/www/html/swad/icon/
@@ -1445,7 +1445,7 @@ sudo cp icon/link.svg /var/www/html/swad/icon/
 							</dd>
 		<dt>Version 22.4:     Sep 15, 2022</dt>
 							<dd>
-							Changes in edition of program items. (329940 lines)
+							Changes in edition of tree nodes. (329940 lines)
 							</dd>
 		<dt>Version 22.3:     Sep 14, 2022</dt>
 							<dd>
@@ -1517,11 +1517,11 @@ ALTER TABLE prg_resources ENGINE=MyISAM;
 							</dd>
 		<dt>Version 21.116:   Sep 02, 2022</dt>
 							<dd>
-							Code refactoring in edition of program items. (329214 lines)
+							Code refactoring in edition of tree nodes. (329214 lines)
 							</dd>
 		<dt>Version 21.115:   Sep 01, 2022</dt>
 							<dd>
-							Code refactoring in edition of program items. (329212 lines)
+							Code refactoring in edition of tree nodes. (329212 lines)
 							</dd>
 		<dt>Version 21.114.1: Jul 25, 2022</dt>
 							<dd>
@@ -1537,7 +1537,7 @@ ALTER TABLE prg_resources ENGINE=MyISAM;
 							</dd>
 		<dt>Version 21.112.1: Jul 22, 2022</dt>
 							<dd>
-							Changes in edition of program items. (329058 lines)
+							Changes in edition of tree nodes. (329058 lines)
 							</dd>
 		<dt>Version 21.112:   Jul 21, 2022</dt>
 							<dd>
@@ -1549,19 +1549,19 @@ ALTER TABLE prg_resources ENGINE=MyISAM;
 							</dd>
 		<dt>Version 21.111:   Jul 21, 2022</dt>
 							<dd>
-							Changes in edition of program items. (329115 lines)
+							Changes in edition of tree nodes. (329115 lines)
 							</dd>
 		<dt>Version 21.110:   Jul 19, 2022</dt>
 							<dd>
-							Changes in edition of program items. (329031 lines)
+							Changes in edition of tree nodes. (329031 lines)
 							</dd>
 		<dt>Version 21.109:   Jul 19, 2022</dt>
 							<dd>
-							Changes in edition of program items. (328975 lines)
+							Changes in edition of tree nodes. (328975 lines)
 							</dd>
 		<dt>Version 21.108:   Jul 18, 2022</dt>
 							<dd>
-							Changes in edition of program items. (328908 lines)
+							Changes in edition of tree nodes. (328908 lines)
 							</dd>
 		<dt>Version 21.107.1: Jul 17, 2022</dt>
 							<dd>
@@ -1581,11 +1581,11 @@ ALTER TABLE prg_resources ENGINE=MyISAM;
 							</dd>
 		<dt>Version 21.104.1: Jul 13, 2022</dt>
 							<dd>
-							Adding resources to program items. (328504 lines)
+							Adding resources to tree nodes. (328504 lines)
 							</dd>
 		<dt>Version 21.104:   Jul 12, 2022</dt>
 							<dd>
-							Adding resources to program items. (328263 lines)<br />
+							Adding resources to tree nodes. (328263 lines)<br />
 							1 change necessary in database:<br />
 							<small><code>
 CREATE TABLE IF NOT EXISTS prg_resources (RscCod INT NOT NULL AUTO_INCREMENT,ItmCod INT NOT NULL DEFAULT -1,RscInd INT NOT NULL DEFAULT 0,Hidden ENUM('N','Y') NOT NULL DEFAULT 'N',Title VARCHAR(2047) NOT NULL,UNIQUE INDEX(RscCod),UNIQUE INDEX(ItmCod,RscInd));
@@ -6668,7 +6668,7 @@ ALTER TABLE prg_items ADD COLUMN Level INT NOT NULL DEFAULT 1 AFTER ItmInd;
 							</dd>
 		<dt>Version 19.134.1: Feb 26, 2020</dt>
 							<dd>
-							Order course program items by indexes. (282022 lines)
+							Order course tree nodes by indexes. (282022 lines)
 							</dd>
 		<dt>Version 19.134:   Feb 26, 2020</dt>
 							<dd>
@@ -6698,7 +6698,7 @@ ALTER TABLE prg_grp ENGINE=MyISAM;
 							</dd>
 		<dt>Version 19.132:   Feb 24, 2020</dt>
 							<dd>
-							Stats on course program items. (281426 lines)
+							Stats on course tree nodes. (281426 lines)
 							</dd>
 		<dt>Version 19.131.1: Feb 24, 2020</dt>
 							<dd>
