--- a/html/database/index.html
+++ b/html/database/index.html
@@ -2187,7 +2187,7 @@ mysql> DESCRIBE prg_items;
 	<section id="prg_resources">
 	<h3>Table prg_resources</h3>
 	<p align="justify">
-	Stores the resources associated to each course program item:
+	Stores the resources associated to each course tree node:
 	</p>
 	<pre>
 mysql> DESCRIBE prg_resources;
